# phoenix

./: Cargo.toml
phoenix-data/: Cargo.toml
phoenix-data/src/: anomalies.rs  classes.rs  common.rs  emoji.rs  lib.rs  regions.rs
phoenix-database/: Cargo.toml
phoenix-database/src/: common.rs  cooldown.rs  lib.rs  user_model.rs
phoenix-util/: Cargo.toml
phoenix-util/src/: lib.rs  math.rs  pagination.rs
src/: command_handler.rs  config.rs  event_handler.rs  main.rs  prelude.rs
src/battle/: controller.rs  fighter.rs  mod.rs  util.rs
src/commands/: adventure.rs  battle.rs  bestiary.rs  mod.rs  owner.rs  ping.rs  profile.rs  rest.rs  start.rs
src/discord/: command.rs  component.rs  embed.rs  extensions.rs  mod.rs  option_handler.rs  pagination.rs
src/util/: math.rs  mod.rs
