[package]
name = "phoenix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
chrono = "0.4.23"
dotenv = "0.15.0"
futures-util = "0.3.25"
database = { path = "phoenix-database" }
data = { path = "phoenix-data" }
util = { path = "phoenix-util" }
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
twilight-gateway = "0.14.0"
twilight-http = "0.14.0"
twilight-model = "0.14.0"
futures = "0.3.25"
lazy_static = "1.4.0"
twilight-standby = "0.14.0"
tokio-stream = "0.1.11"
rand = "0.8.5"
async-recursion = "1.0.0"
trait-set = "0.3.0"
