[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tracing = "0.1.37"
serde = "1.0.149"
data = { path = "../phoenix-data" }

[dependencies.mongodb]
mongodb = "2.3.1"
default-features = false
features = ["async-std-runtime"]