[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tracing = "0.1.37"
serde = "1.0.149"
rand = "0.8.5"
data = { path = "../phoenix-data" }
util = { path = "../phoenix-util" }

[dependencies.mongodb]
mongodb = "2.3.1"
default-features = false
features = ["async-std-runtime"]