[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "macros"] }
rand = "0.8.5"
data = { path = "../phoenix-data" }